# docs/swagger.yaml
@@ -2,25 +2,45 @@ definitions:
   controllers.ChangePasswordRequest:
     properties:
       new_password:
+        maxLength: 32
+        minLength: 8
         type: string
       old_password:
+        maxLength: 32
+        minLength: 8
         type: string
+    required:
+    - new_password
+    - old_password
     type: object
   controllers.LoginRequest:
     properties:
       email:
         type: string
       password:
+        maxLength: 32
+        minLength: 8
         type: string
+    required:
+    - email
+    - password
     type: object
   controllers.RegisterRequest:
     properties:
       email:
         type: string
       password:
+        maxLength: 32
+        minLength: 8
         type: string
       username:
+        maxLength: 32
+        minLength: 3
         type: string
+    required:
+    - email
+    - password
+    - username
     type: object
   controllers.Session:
     properties:
@@ -32,7 +52,12 @@ definitions:
       email:
         type: string
       username:
+        maxLength: 32
+        minLength: 3
         type: string
+    required:
+    - email
+    - username
     type: object
   models.User:
     properties:
@@ -44,12 +69,12 @@ definitions:
         type: string
       is_admin:
         type: boolean
+      is_verified:
+        type: boolean
       updated_at:
         type: string
       username:
         type: string
-      verified:
-        type: boolean
     type: object
   utils.APIError:
     properties:
@@ -386,6 +411,37 @@ paths:
             $ref: '#/definitions/utils.APIError'
       security:
       - Bearer: []
+      tags:
+      - User
+  /api/users/{id}/verify:
+    get:
+      consumes:
+      - application/json
+      description: Verify a user's email given a token
+      parameters:
+      - description: User ID
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: Verification token
+        in: query
+        name: token
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "204":
+          description: No Content
+        "400":
+          description: Bad request
+          schema:
+            $ref: '#/definitions/utils.APIError'
+        "500":
+          description: Internal server error
+          schema:
+            $ref: '#/definitions/utils.APIError'
       tags:
       - User
 securityDefinitions:
